--- a/src/pages/price-list/water-heater-repair-cost.astro
+++ b/src/pages/price-list/water-heater-repair-cost.astro
@@ -1,6 +1,7 @@
 ---
 import Layout from "@layouts/Layout.astro";
 import Container from "@components/container.astro";
+import Contactbtn from "@components/contactbtn.astro";
 import Btn from "@components/btn.astro";
 import Costanchor from "@components/price-list/components_dryer-repair-cost.astro";
 import Cta from "@components/cta.astro";
@@ -40,7 +41,7 @@ import "css/price/style_price.css";
             alt="WATER HEATER REPAIR COST"
           />
 
-          <Btn />
+          <Contactbtn/>
         </div>
 
         <div class="col-two">
