--- a/src/pages/price-list/water-heater-repair-cost.astro
+++ b/src/pages/price-list/water-heater-repair-cost.astro
@@ -27,7 +27,7 @@ import "css/price/style_price.css";
   });
 </script>
 
-<Layout title="Dryer Repair Cost">
+<Layout title="Water Heater Repair Cost">
   <Container>
     <main>
       <h1><span class="animate-charcter">Water Heater Repair Cost</span></h1>
