--- a/src/pages/price-list/water-heater-repair-cost.astro
+++ b/src/pages/price-list/water-heater-repair-cost.astro
@@ -624,6 +624,16 @@ import "css/price/style_price.css";
       </div>
       <Btn />
 
+
+
+
+
+
+
+
+
+
+
       <div class="maintenance">
         <div class="head-maintenance">
           <h2>
@@ -639,11 +649,16 @@ import "css/price/style_price.css";
           </p>
         </div>
 
+
         <div class="full-content_maintenance">
           <div class="content-1_maintenance">
-            <h3>For Traditional Tank-Style Water Heaters</h3>
 
-            <div class="maint-a">
+            
+            <h3>For Traditional Tank-Style Water Heaters</h3>
+            
+            <ul>
+
+            <li>
               <p><b>Inspecting the Tank and Connections</b></p>
               <p>
                 Checking for signs of leaks or corrosion on the tank’s exterior.
@@ -652,9 +667,9 @@ import "css/price/style_price.css";
                 Examining all connections for tightness and signs of wear or
                 leakage.
               </p>
-            </div>
+            </li>
 
-            <div class="maint-a">
+          <li>
               <p>
                 <b>
                   Testing the Temperature-Pressure Relief Valve (TPR Valve)
@@ -663,104 +678,118 @@ import "css/price/style_price.css";
               <p>
                 Ensuring that it opens freely and does not leak when closed.
               </p>
-            </div>
+            </li>
 
-            <div class="maint-a">
+          <li>
               <p><b>Checking the Anode Rod</b></p>
               <p>
                 Assessing the anode rod for excessive corrosion and replacing it
                 if necessary.
               </p>
-            </div>
+            </li>
 
-            <div class="maint-a">
+          <li>
               <p><b>Flushing the Tank</b></p>
               <p>
                 Draining and flushing out the tank to remove sediment build-up.
               </p>
-            </div>
+            </li>
 
-            <div class="maint-a">
+          <li>
               <p><b>Adjusting the Thermostat Settings</b></p>
               <p>
                 Verifying and adjusting the temperature settings for optimal
                 performance and safety.
               </p>
-            </div>
+            </li>
 
-            <div class="maint-a">
+          <li>
               <p>
                 <b>Inspecting the Heating Elements (for electric heaters)</b>
               </p>
               <p>
                 Checking for proper operation and replacing any faulty elements.
               </p>
-            </div>
+            </li>
 
-            <div class="maint-a">
+          <li>
               <p><b>Cleaning the Burner and Ignition (for gas heaters)</b></p>
               <p>
                 Cleaning and ensuring proper functionality of the burner and
                 ignition system.
               </p>
-            </div>
+            </li>
+
+          </ul>
+
           </div>
 
           <div class="content-2_maintenance">
             <h3>For Tankless Water Heaters</h3>
 
-            <div class="maint-a">
+            <ul>
+
+            <li>
               <p><b>Cleaning the Air Intake and Ventilation</b></p>
               <p>Removing any blockages and ensuring proper airflow.</p>
-            </div>
+            </li>
 
-            <div class="maint-a">
+          <li>
               <p><b>Descale and Flushing the System</b></p>
               <p>
                 Descale and flush the heat exchanger to prevent lime scale and
                 other build-ups.
               </p>
-            </div>
+            </li>
 
-            <div class="maint-a">
+          <li>
               <p><b>Inspecting Water and Gas Connections</b></p>
               <p>
                 Checking for any leaks and ensuring all connections are secure.
               </p>
-            </div>
+            </li>
 
-            <div class="maint-a">
+          <li>
               <p><b>Cleaning the Filters</b></p>
               <p>
                 Cleaning or replacing filters to maintain proper water flow and
                 protect internal components.
               </p>
-            </div>
+            </li>
 
-            <div class="maint-a">
+          <li>
               <p><b>Testing the Burner</b></p>
               <p>Ensuring smooth and immediate burner ignition.</p>
-            </div>
+            </li>
 
-            <div class="maint-a">
+          <li>
               <p><b>Inspecting Electrical Components</b></p>
               <p>
                 Checking electrical connections and component functionality.
               </p>
-            </div>
+            </li>
 
-            <div class="maint-a">
+          <li>
               <p><b>Examining the Heat Exchanger</b></p>
               <p>Looking for any signs of corrosion or damage.</p>
-            </div>
-          </div>
+            </li>
+            
+          </ul>
+
+        </div>
+
         </div>
 
         <div class="description_maintenance">
-          <svg
+
+          <div class="conclusion-description_maintenance">
+
+          <div class="head_description_maintenance">
+
+            <svg
             fill="#000000"
-            width="32px"
-            height="32px"
+            width="37px"
+            height="37px"
             viewBox="0 0 1024 1024"
             xmlns="http://www.w3.org/2000/svg"
             class="icon">
@@ -768,8 +797,10 @@ import "css/price/style_price.css";
               d="M866.9 169.9L527.1 54.1C523 52.7 517.5 52 512 52s-11 .7-15.1 2.1L157.1 169.9c-8.3 2.8-15.1 12.4-15.1 21.2v482.4c0 8.8 5.7 20.4 12.6 25.9L499.3 968c3.5 2.7 8 4.1 12.6 4.1s9.2-1.4 12.6-4.1l344.7-268.6c6.9-5.4 12.6-17 12.6-25.9V191.1c.2-8.8-6.6-18.3-14.9-21.2zM810 654.3L512 886.5 214 654.3V226.7l298-101.6 298 101.6v427.6zm-405.8-201c-3-4.1-7.8-6.6-13-6.6H336c-6.5 0-10.3 7.4-6.5 12.7l126.4 174a16.1 16.1 0 0 0 26 0l212.6-292.7c3.8-5.3 0-12.7-6.5-12.7h-55.2c-5.1 0-10 2.5-13 6.6L468.9 542.4l-64.7-89.1z"
             ></path>
           </svg>
-
           <p><b>General Safety Checks</b></p>
+        
+          </div>
+
           <p>- Testing Carbon Monoxide Detectors.</p>
           <p>
             - Ensuring proper functionality to detect any potential gas leaks.
@@ -779,11 +810,15 @@ import "css/price/style_price.css";
             - Familiarizing with the unit’s manual and emergency procedures.
           </p>
 
+        </div>
+
           <div class="conclusion-description_maintenance">
+
+            <div class="head_description_maintenance">
             <svg
               fill="#000000"
-              height="30px"
-              width="30px"
+              height="35px"
+              width="35px"
               version="1.1"
               id="Layer_1"
               xmlns="http://www.w3.org/2000/svg"
@@ -822,6 +857,8 @@ import "css/price/style_price.css";
               </g>
             </svg>
             <p><b>Documentation</b></p>
+            </div>
+
             <p>- Maintaining Service Records.</p>
             <p>
               - Keeping records of all maintenance activities for warranty and
@@ -833,6 +870,7 @@ import "css/price/style_price.css";
               heater but also ensures it runs more efficiently and safely.
             </p>
           </div>
+
         </div>
       </div>
       <Btn />
