--- a/src/pages/price-list/water-heater-repair-cost.astro
+++ b/src/pages/price-list/water-heater-repair-cost.astro
@@ -624,16 +624,6 @@ import "css/price/style_price.css";
       </div>
       <Btn />
 
-
-
-
-
-
-
-
-
-
-
       <div class="maintenance">
         <div class="head-maintenance">
           <h2>
@@ -649,187 +639,175 @@ import "css/price/style_price.css";
           </p>
         </div>
 
-
         <div class="full-content_maintenance">
           <div class="content-1_maintenance">
-
-            
             <h3>For Traditional Tank-Style Water Heaters</h3>
-            
+
             <ul>
+              <li>
+                <p><b>Inspecting the Tank and Connections</b></p>
+                <p>
+                  Checking for signs of leaks or corrosion on the tank’s
+                  exterior.
+                </p>
+                <p>
+                  Examining all connections for tightness and signs of wear or
+                  leakage.
+                </p>
+              </li>
 
-            <li>
-              <p><b>Inspecting the Tank and Connections</b></p>
-              <p>
-                Checking for signs of leaks or corrosion on the tank’s exterior.
-              </p>
-              <p>
-                Examining all connections for tightness and signs of wear or
-                leakage.
-              </p>
-            </li>
+              <li>
+                <p>
+                  <b>
+                    Testing the Temperature-Pressure Relief Valve (TPR Valve)
+                  </b>
+                </p>
+                <p>
+                  Ensuring that it opens freely and does not leak when closed.
+                </p>
+              </li>
 
-          <li>
-              <p>
-                <b>
-                  Testing the Temperature-Pressure Relief Valve (TPR Valve)
-                </b>
-              </p>
-              <p>
-                Ensuring that it opens freely and does not leak when closed.
-              </p>
-            </li>
+              <li>
+                <p><b>Checking the Anode Rod</b></p>
+                <p>
+                  Assessing the anode rod for excessive corrosion and replacing
+                  it if necessary.
+                </p>
+              </li>
 
-          <li>
-              <p><b>Checking the Anode Rod</b></p>
-              <p>
-                Assessing the anode rod for excessive corrosion and replacing it
-                if necessary.
-              </p>
-            </li>
+              <li>
+                <p><b>Flushing the Tank</b></p>
+                <p>
+                  Draining and flushing out the tank to remove sediment
+                  build-up.
+                </p>
+              </li>
 
-          <li>
-              <p><b>Flushing the Tank</b></p>
-              <p>
-                Draining and flushing out the tank to remove sediment build-up.
-              </p>
-            </li>
+              <li>
+                <p><b>Adjusting the Thermostat Settings</b></p>
+                <p>
+                  Verifying and adjusting the temperature settings for optimal
+                  performance and safety.
+                </p>
+              </li>
 
-          <li>
-              <p><b>Adjusting the Thermostat Settings</b></p>
-              <p>
-                Verifying and adjusting the temperature settings for optimal
-                performance and safety.
-              </p>
-            </li>
+              <li>
+                <p>
+                  <b>Inspecting the Heating Elements (for electric heaters)</b>
+                </p>
+                <p>
+                  Checking for proper operation and replacing any faulty
+                  elements.
+                </p>
+              </li>
 
-          <li>
-              <p>
-                <b>Inspecting the Heating Elements (for electric heaters)</b>
-              </p>
-              <p>
-                Checking for proper operation and replacing any faulty elements.
-              </p>
-            </li>
-
-          <li>
-              <p><b>Cleaning the Burner and Ignition (for gas heaters)</b></p>
-              <p>
-                Cleaning and ensuring proper functionality of the burner and
-                ignition system.
-              </p>
-            </li>
-
-          </ul>
-
+              <li>
+                <p><b>Cleaning the Burner and Ignition (for gas heaters)</b></p>
+                <p>
+                  Cleaning and ensuring proper functionality of the burner and
+                  ignition system.
+                </p>
+              </li>
+            </ul>
           </div>
 
           <div class="content-2_maintenance">
             <h3>For Tankless Water Heaters</h3>
 
             <ul>
+              <li>
+                <p><b>Cleaning the Air Intake and Ventilation</b></p>
+                <p>Removing any blockages and ensuring proper airflow.</p>
+              </li>
 
-            <li>
-              <p><b>Cleaning the Air Intake and Ventilation</b></p>
-              <p>Removing any blockages and ensuring proper airflow.</p>
-            </li>
+              <li>
+                <p><b>Descale and Flushing the System</b></p>
+                <p>
+                  Descale and flush the heat exchanger to prevent lime scale and
+                  other build-ups.
+                </p>
+              </li>
 
-          <li>
-              <p><b>Descale and Flushing the System</b></p>
-              <p>
-                Descale and flush the heat exchanger to prevent lime scale and
-                other build-ups.
-              </p>
-            </li>
+              <li>
+                <p><b>Inspecting Water and Gas Connections</b></p>
+                <p>
+                  Checking for any leaks and ensuring all connections are
+                  secure.
+                </p>
+              </li>
 
-          <li>
-              <p><b>Inspecting Water and Gas Connections</b></p>
-              <p>
-                Checking for any leaks and ensuring all connections are secure.
-              </p>
-            </li>
+              <li>
+                <p><b>Cleaning the Filters</b></p>
+                <p>
+                  Cleaning or replacing filters to maintain proper water flow
+                  and protect internal components.
+                </p>
+              </li>
 
-          <li>
-              <p><b>Cleaning the Filters</b></p>
-              <p>
-                Cleaning or replacing filters to maintain proper water flow and
-                protect internal components.
-              </p>
-            </li>
+              <li>
+                <p><b>Testing the Burner</b></p>
+                <p>Ensuring smooth and immediate burner ignition.</p>
+              </li>
 
-          <li>
-              <p><b>Testing the Burner</b></p>
-              <p>Ensuring smooth and immediate burner ignition.</p>
-            </li>
+              <li>
+                <p><b>Inspecting Electrical Components</b></p>
+                <p>
+                  Checking electrical connections and component functionality.
+                </p>
+              </li>
 
-          <li>
-              <p><b>Inspecting Electrical Components</b></p>
-              <p>
-                Checking electrical connections and component functionality.
-              </p>
-            </li>
-
-          <li>
-              <p><b>Examining the Heat Exchanger</b></p>
-              <p>Looking for any signs of corrosion or damage.</p>
-            </li>
-            
-          </ul>
-
-        </div>
-
+              <li>
+                <p><b>Examining the Heat Exchanger</b></p>
+                <p>Looking for any signs of corrosion or damage.</p>
+              </li>
+            </ul>
+          </div>
         </div>
 
         <div class="description_maintenance">
-
           <div class="conclusion-description_maintenance">
+            <div class="head_description_maintenance">
+              <svg
+                fill="#000000"
+                width="37px"
+                height="37px"
+                viewBox="0 0 1024 1024"
+                xmlns="http://www.w3.org/2000/svg"
+                class="icon">
+                <path
+                  d="M866.9 169.9L527.1 54.1C523 52.7 517.5 52 512 52s-11 .7-15.1 2.1L157.1 169.9c-8.3 2.8-15.1 12.4-15.1 21.2v482.4c0 8.8 5.7 20.4 12.6 25.9L499.3 968c3.5 2.7 8 4.1 12.6 4.1s9.2-1.4 12.6-4.1l344.7-268.6c6.9-5.4 12.6-17 12.6-25.9V191.1c.2-8.8-6.6-18.3-14.9-21.2zM810 654.3L512 886.5 214 654.3V226.7l298-101.6 298 101.6v427.6zm-405.8-201c-3-4.1-7.8-6.6-13-6.6H336c-6.5 0-10.3 7.4-6.5 12.7l126.4 174a16.1 16.1 0 0 0 26 0l212.6-292.7c3.8-5.3 0-12.7-6.5-12.7h-55.2c-5.1 0-10 2.5-13 6.6L468.9 542.4l-64.7-89.1z"
+                ></path>
+              </svg>
+              <p><b>General Safety Checks</b></p>
+            </div>
 
-          <div class="head_description_maintenance">
-
-            <svg
-            fill="#000000"
-            width="37px"
-            height="37px"
-            viewBox="0 0 1024 1024"
-            xmlns="http://www.w3.org/2000/svg"
-            class="icon">
-            <path
-              d="M866.9 169.9L527.1 54.1C523 52.7 517.5 52 512 52s-11 .7-15.1 2.1L157.1 169.9c-8.3 2.8-15.1 12.4-15.1 21.2v482.4c0 8.8 5.7 20.4 12.6 25.9L499.3 968c3.5 2.7 8 4.1 12.6 4.1s9.2-1.4 12.6-4.1l344.7-268.6c6.9-5.4 12.6-17 12.6-25.9V191.1c.2-8.8-6.6-18.3-14.9-21.2zM810 654.3L512 886.5 214 654.3V226.7l298-101.6 298 101.6v427.6zm-405.8-201c-3-4.1-7.8-6.6-13-6.6H336c-6.5 0-10.3 7.4-6.5 12.7l126.4 174a16.1 16.1 0 0 0 26 0l212.6-292.7c3.8-5.3 0-12.7-6.5-12.7h-55.2c-5.1 0-10 2.5-13 6.6L468.9 542.4l-64.7-89.1z"
-            ></path>
-          </svg>
-          <p><b>General Safety Checks</b></p>
-        
+            <p>- Testing Carbon Monoxide Detectors.</p>
+            <p>
+              - Ensuring proper functionality to detect any potential gas leaks.
+            </p>
+            <p>- Reviewing Safety and Emergency Procedures.</p>
+            <p>
+              - Familiarizing with the unit’s manual and emergency procedures.
+            </p>
           </div>
 
-          <p>- Testing Carbon Monoxide Detectors.</p>
-          <p>
-            - Ensuring proper functionality to detect any potential gas leaks.
-          </p>
-          <p>- Reviewing Safety and Emergency Procedures.</p>
-          <p>
-            - Familiarizing with the unit’s manual and emergency procedures.
-          </p>
-
-        </div>
-
           <div class="conclusion-description_maintenance">
-
             <div class="head_description_maintenance">
-            <svg
-              fill="#000000"
-              height="35px"
-              width="35px"
-              version="1.1"
-              id="Layer_1"
-              xmlns="http://www.w3.org/2000/svg"
-              xmlns:xlink="http://www.w3.org/1999/xlink"
-              viewBox="0 0 296.999 296.999"
-              xml:space="preserve">
-              <g>
+              <svg
+                fill="#000000"
+                height="35px"
+                width="35px"
+                version="1.1"
+                id="Layer_1"
+                xmlns="http://www.w3.org/2000/svg"
+                xmlns:xlink="http://www.w3.org/1999/xlink"
+                viewBox="0 0 296.999 296.999"
+                xml:space="preserve">
                 <g>
                   <g>
-                    <path
-                      d="M169.197,43.09H18.808c-7.176,0-13.014,5.838-13.014,13.014v227.444c0,7.176,5.838,13.014,13.014,13.014h150.389
+                    <g>
+                      <path
+                        d="M169.197,43.09H18.808c-7.176,0-13.014,5.838-13.014,13.014v227.444c0,7.176,5.838,13.014,13.014,13.014h150.389
 				c7.176,0,13.014-5.838,13.014-13.014V56.105C182.211,48.928,176.373,43.09,169.197,43.09z M151.794,274.258H36.21
 				c-4.479,0-8.111-3.632-8.111-8.111s3.632-8.111,8.111-8.111h115.584c4.479,0,8.111,3.632,8.111,8.111
 				S156.273,274.258,151.794,274.258z M151.794,235.73H36.21c-4.479,0-8.111-3.632-8.111-8.111s3.632-8.111,8.111-8.111h115.584
@@ -840,23 +818,23 @@ import "css/price/style_price.css";
 				s3.632-8.111,8.111-8.111h115.584c4.479,0,8.111,3.632,8.111,8.111S156.273,120.146,151.794,120.146z M151.794,81.618H36.21
 				c-4.479,0-8.111-3.632-8.111-8.111c0-4.479,3.632-8.111,8.111-8.111h115.584c4.479,0,8.111,3.632,8.111,8.111
 				C159.905,77.986,156.273,81.618,151.794,81.618z"
-                    ></path>
-                    <path
-                      d="M213.642,0H57.336c-7.177,0-13.014,5.838-13.014,13.014v13.854h124.875c16.121,0,29.237,13.115,29.237,29.237v201.931
+                      ></path>
+                      <path
+                        d="M213.642,0H57.336c-7.177,0-13.014,5.838-13.014,13.014v13.854h124.875c16.121,0,29.237,13.115,29.237,29.237v201.931
 				h15.208c7.176,0,13.014-5.838,13.014-13.014V13.014C226.656,5.838,220.818,0,213.642,0z"
-                    ></path>
-                    <path
-                      d="M291.205,23.324C291.204,10.464,281.88,0,270.42,0c-11.461,0-20.785,10.464-20.785,23.324v13.584h41.57V23.324z"
-                    ></path>
-                    <path
-                      d="M249.635,53.13v214.537h0c0,1.2,0.342,2.373,0.983,3.371l14.921,23.249c1.087,1.694,2.919,2.712,4.881,2.712
+                      ></path>
+                      <path
+                        d="M291.205,23.324C291.204,10.464,281.88,0,270.42,0c-11.461,0-20.785,10.464-20.785,23.324v13.584h41.57V23.324z"
+                      ></path>
+                      <path
+                        d="M249.635,53.13v214.537h0c0,1.2,0.342,2.373,0.983,3.371l14.921,23.249c1.087,1.694,2.919,2.712,4.881,2.712
 				c1.961,0,3.794-1.018,4.881-2.712l14.921-23.249c0.641-0.998,0.983-2.171,0.983-3.371V53.13H249.635z"
-                    ></path>
+                      ></path>
+                    </g>
                   </g>
                 </g>
-              </g>
-            </svg>
-            <p><b>Documentation</b></p>
+              </svg>
+              <p><b>Documentation</b></p>
             </div>
 
             <p>- Maintaining Service Records.</p>
@@ -870,7 +848,6 @@ import "css/price/style_price.css";
               heater but also ensures it runs more efficiently and safely.
             </p>
           </div>
-
         </div>
       </div>
       <Btn />
