--- a/src/css/price/style_price.css
+++ b/src/css/price/style_price.css
@@ -11,8 +11,13 @@
 
 
 html {
-overflow-y: scroll;
-scroll-behavior: smooth;
+  overflow-y: scroll;
+  scroll-behavior: smooth;
+}
+
+img {
+  border-radius: 10px;
+  box-shadow: 5px 5px 5px 3px rgba(0, 0, 0, 0.25);
 }
 
 h2 {
@@ -27,13 +32,11 @@ h2 {
 
 .animate-charcter {
   text-transform: uppercase;
-  background-image: linear-gradient(
--225deg,
-#fff 0%,
-#000 15%,
-#111112 67%,
-#858384 100%
-);
+  background-image: linear-gradient(-225deg,
+      #fff 0%,
+      #000 15%,
+      #111112 67%,
+      #858384 100%);
   background-size: auto auto;
   background-clip: border-box;
   background-size: 200% auto;
@@ -45,7 +48,7 @@ h2 {
   animation: textclip 4s linear infinite;
   display: inline-block;
   font-size: clamp(40px, 8vw, 60px);
-  line-height: clamp(56px,8vh,60px);
+  line-height: clamp(56px, 8vh, 60px);
   font-weight: 900;
 }
 
@@ -80,14 +83,14 @@ h2 {
   grid-column: auto;
 }
 
-.col-two p:nth-child(2){
+.col-two p:nth-child(2) {
   padding-top: 1%;
-  }
+}
 
-  .col-two b {
-    text-shadow: 0.5px 0.5px 0.8px #75baf587;
-  }
-  
+.col-two b {
+  text-shadow: 0.5px 0.5px 0.8px #75baf587;
+}
+
 
 .two-col-grid {
   display: block;
@@ -99,8 +102,8 @@ h2 {
 }
 
 main {
-    width: 100%;
-    max-width: 1920px !important;
+  width: 100%;
+  max-width: 1920px !important;
 }
 
 .max-w-screen-xl {
@@ -126,14 +129,14 @@ main {
   display: grid;
 }
 
-.head_pricing-policy h2:nth-child(1){
+.head_pricing-policy h2:nth-child(1) {
   margin: 3% 0% 0% 0%;
 }
 
 
-.head_pricing-policy h2{
-    margin: 6% 0% 0% 0%;
-    margin-bottom: 1%;
+.head_pricing-policy h2 {
+  margin: 6% 0% 0% 0%;
+  margin-bottom: 1%;
 }
 
 .head_pricing-policy p {
@@ -151,7 +154,7 @@ main {
 }
 
 .con-inside_pricing-policy {
-display: flex;
+  display: flex;
 }
 
 .con-inside_pricing-policy p {
@@ -170,7 +173,7 @@ display: flex;
 }
 
 .icon_pricing-policy svg {
- justify-self: center;
+  justify-self: center;
 }
 
 .icon_pricing-policy h3 {
@@ -180,6 +183,7 @@ display: flex;
   font-size: clamp(18px, 4vw, 20px) !important;
   margin-top: 0;
 }
+
 .desc_pricing-policy {
   display: grid;
   padding-left: 2%;
@@ -197,7 +201,7 @@ display: flex;
 
 .con-inside_pricing-policy:hover #cost-svg {
   fill: rgb(31 120 243);
-  stroke:rgb(31 120 243);
+  stroke: rgb(31 120 243);
   transition: 0.3s;
 }
 
@@ -213,10 +217,10 @@ display: flex;
   border-radius: 5px;
 
   border: solid 2px #ff2a2a;
-    background-color: #dae1e852;
+  background-color: #dae1e852;
 }
 
-.pros_pricing-policy p{
+.pros_pricing-policy p {
   font-size: clamp(16px, 4vw, 18px);
 }
 
@@ -241,73 +245,100 @@ display: flex;
 /* Часто задаваемые вопросы */
 
 .FAQ {
-    cursor: pointer;
-    width: 100%;
-    text-align: left;
-    border-top: 1px solid #dedede;
-    /* border-top: 1px solid #75baf566; */
-    padding: 2% 2%;
-    display: flex;
-  }
-  
-  .FAQ.active .fa_minus {
-    display: block;
-  }
-  
-  .FAQ.active .fa_plus {
-    display: none;
-  }
-  
-  .FAQ:hover .fa h3 {
-    color: #2c7bc0;
-    /* text-shadow: 0.1px 0.1px 0.1px #000; */
-    transition: all 0.25s linear;
+  cursor: pointer;
+  width: 100%;
+  text-align: left;
+  border-top: 1px solid #dedede;
+  /* border-top: 1px solid #75baf566; */
+  padding: 2% 2%;
+  display: flex;
+  justify-content: space-between;
 }
-  
-  .FAQ_bottom {
-    /* border-bottom: 1px solid #75baf566; */
-    border-top: 1px solid #dedede;
-  }
-  
-  .fa {
-    width: 96%;
-    margin-right: 10px;
+
+.FAQ.active .fa_minus {
+  display: block;
+}
+
+.FAQ.active .fa_plus {
+  display: none;
+}
+
+.FAQ:hover .fa h3 {
+  color: #2c7bc0;
+  /* text-shadow: 0.1px 0.1px 0.1px #000; */
+  transition: all 0.25s linear;
+}
+
+.FAQ_bottom {
+  /* border-bottom: 1px solid #75baf566; */
+  border-top: 1px solid #dedede;
+}
+
+.fa {
+  width: 96%;
+  margin-right: 10px;
 }
 
 .fa h3 {
   margin: 0;
   font-weight: 600;
-  font-size: clamp(22px, 5vw, 24px)!important;
-}
-  
-  .fa_plus {
-    display: inline-block;
-    position: relative;
-    padding-top: 5px;
-    font-weight: 300;
+  font-size: clamp(22px, 5vw, 24px) !important;
 }
 
-  .fa_minus {
-    display: none;
-    position: relative;
-    padding-bottom: 5px;
-    font-weight: 300;
-  }
-  
-  .questions {
-    max-height: 0px;
-    overflow: hidden;
-    transition: max-height 0.3s ease-out;
-    padding: 0% 2%;
-  }
-
-  .questions p {
-    font-weight: 500;
-    max-width: 92%;
-    font-size: clamp(16px, 3vw, 20px);
+.fa_plus {
+  display: inline-block;
+  position: relative;
+  padding-top: 5px;
+  font-weight: 300;
 }
 
-  /* Часто задаваемые вопросы */
+.fa_minus {
+  display: none;
+  position: relative;
+  padding-bottom: 5px;
+  font-weight: 300;
+}
+
+.questions {
+  max-height: 0px;
+  overflow: hidden;
+  transition: max-height 0.3s ease-out;
+  padding: 0% 2%;
+}
+
+.questions p {
+  font-weight: 500;
+  max-width: 92%;
+  font-size: clamp(16px, 3vw, 20px);
+}
+
+
+/* .questions li::marker {
+  unicode-bidi: normal !important;
+  font-variant-numeric: normal !important;
+  text-transform: unset;
+  text-indent: unset !important;
+  text-align: center !important;
+  -moz-text-align-last: unset;
+  text-align-last: center !important;
+
+
+  content: '*';
+  font-size: 28px !important;
+  color: #0f77cc !important;
+  margin-top: 5px !important;
+  margin-right: 8px !important;
+  align-self: center;
+} */
+
+.questions li {
+  font-weight: 500;
+  max-width: 92%;
+  font-size: clamp(16px, 3vw, 20px);
+  margin-top: 5px;
+}
+
+/* Часто задаваемые вопросы */
 
 
 
@@ -366,7 +397,7 @@ display: flex;
   align-self: center;
 }
 
-.desk_job-prices a:hover{
+.desk_job-prices a:hover {
   text-decoration: underline;
 }
 
@@ -376,7 +407,7 @@ display: flex;
   min-width: 130px;
 }
 
-.money_job-prices p{
+.money_job-prices p {
   white-space: nowrap;
   width: 100%;
   font-size: clamp(22px, 5vw, 24px);
@@ -397,17 +428,17 @@ display: flex;
 }
 
 .pros_job-prices {
-    width: 80%;
-    margin: 0 auto;
-    margin-top: 3%;
-    /* border: solid 3px #ff2a2a52; */
-    border-radius: 5px;
+  width: 80%;
+  margin: 0 auto;
+  margin-top: 3%;
+  /* border: solid 3px #ff2a2a52; */
+  border-radius: 5px;
 
-    border: solid 2px #ff2a2a;
-    background-color: #dae1e852;
+  border: solid 2px #ff2a2a;
+  background-color: #dae1e852;
 }
 
-.pros_job-prices p{
+.pros_job-prices p {
   font-size: clamp(16px, 4vw, 18px);
 }
 
@@ -435,14 +466,14 @@ display: flex;
 
 .head-maintenance {
   text-align: center;
-    display: grid;
+  display: grid;
 }
 
 .head-maintenance h2 {
   margin-bottom: 1%;
 }
 
-.head-maintenance p{
+.head-maintenance p {
   text-align: center;
   margin: 0 0 3% 0;
   font-size: clamp(16px, 3vw, 20px);
@@ -457,12 +488,13 @@ display: flex;
   grid-gap: 5%;
 }
 
-.full-content_maintenance  h3 {
-    margin-top: 10px;
-    font-size: clamp(18px, 4vw, 20px) !important;
-    text-shadow: 0.5px 0.5px 0.8px #75baf587;
+.full-content_maintenance h3 {
+  margin-top: 10px;
+  font-size: clamp(18px, 4vw, 20px) !important;
+  text-shadow: 0.5px 0.5px 0.8px #75baf587;
 }
-.full-content_maintenance ul{
+
+.full-content_maintenance ul {
   margin-left: 8px;
 }
 
@@ -478,7 +510,8 @@ display: flex;
   margin: 0;
 }
 
-.content-1_maintenance, .content-2_maintenance {
+.content-1_maintenance,
+.content-2_maintenance {
   width: 100%;
   border: solid 3px #75baf587;
   border-radius: 20px;
@@ -500,7 +533,7 @@ display: flex;
   margin: 0 10px 0 0;
 }
 
-.head_description_maintenance p{
+.head_description_maintenance p {
   align-self: center;
   text-shadow: 0.5px 0.5px 0.8px #75baf587;
 }
@@ -509,14 +542,53 @@ display: flex;
   margin-top: 4%;
 }
 
-.conclusion-description_maintenance:hover svg{
+.conclusion-description_maintenance:hover svg {
   fill: rgb(31 120 243);
   transition: 0.3s;
 }
 
 
-
 /* water-heater-repair-cost */
+
+
+
+
+
+
+/* oven-repair-cost */
+
+#head_pricing-policy_foto {
+  display: flex;
+  justify-content: center;
+}
+
+.head_pricing-policy_foto-a,
+.head_pricing-policy_foto-b {
+  margin: 1% 3% 20px 3%;
+  align-self: center;
+  justify-self: center;
+  display: grid;
+}
+
+
+.head_pricing-policy_foto-a h2 {
+  margin-bottom: 5% !important;
+}
+
+@media (max-width:768px) {
+  #head_pricing-policy_foto {
+    display: grid;
+  }
+
+  .head_pricing-policy_foto-a h2 {
+    margin-bottom: 1% !important;
+  }
+}
+
+
+
+
+/* oven-repair-cost */
 
 
 
@@ -527,7 +599,7 @@ display: flex;
 
 
 @media (max-width:1440px) {
-  .head_pricing-policy h2:nth-child(1){
+  .head_pricing-policy h2:nth-child(1) {
     margin: 6% 0% 0% 0%;
   }
 }
@@ -536,132 +608,129 @@ display: flex;
 
 
 
-  
 
-  @media (max-width:1024px) {
 
-    .two-col-grid {
-        width:100%;
-        display: grid;
-        /* grid-template-columns: 1fr 2fr; */
-    }
-    
-    .col-one img {
-        /* width: 80%; */
-        justify-self: center;
-        margin-bottom: 10px;
-    }
+@media (max-width:1024px) {
 
-    .col-one {
-      width: 100%;
-      margin: 0;
-      max-width: 100%;
+  .two-col-grid {
+    width: 100%;
+    display: grid;
+    /* grid-template-columns: 1fr 2fr; */
   }
 
-    .col-one a{
-        width: 100%;
-        margin: 0;
-        display: grid;
-        text-align: center;
-    }
-
-    .contactbtn-form {
-      max-width: 341px;
-      margin: 0 !important;
+  .col-one img {
+    /* width: 80%; */
+    justify-self: center;
+    margin-bottom: 10px;
   }
 
- 
+  .col-one {
+    width: 100%;
+    margin: 0;
+    max-width: 100%;
+  }
+
+  .col-one a {
+    width: 100%;
+    margin: 0;
+    display: grid;
+    text-align: center;
+  }
+
+  .contactbtn-form {
+    max-width: 341px;
+    margin: 0 !important;
+  }
+
+
   .contactbtn-form a {
     max-width: 215px !important;
     display: inline;
     margin-top: 10px;
+  }
+
 }
 
+
+
+
+
+
+
+
+
+
+
+
+@media (max-width:768px) {
+
+  .head_pricing-policy {
+    margin-bottom: 7%;
   }
 
-
-
-
-
-
-
-
-
-
-
-
-  @media (max-width:768px) { 
-
-    .head_pricing-policy {
-      margin-bottom: 7%;
-  }
-
-    .con-inside_pricing-policy {
-      display: grid;
+  .con-inside_pricing-policy {
+    display: grid;
   }
 
   .content_pricing-policy {
     margin-bottom: 10%;
-}
+  }
 
-.icon_pricing-policy {
-  min-width: auto;
-  margin-bottom: 2%;
-}
+  .icon_pricing-policy {
+    min-width: auto;
+    margin-bottom: 2%;
+  }
 
-.pros_pricing-policy {
-  width: 100%;
-}
+  .pros_pricing-policy {
+    width: 100%;
+  }
 
-    .content_job-prices {
-      padding: 3% 2%;
+  .content_job-prices {
+    padding: 3% 2%;
   }
 
   .head-prices p {
     max-width: 100%;
-}
+  }
 
-.head-maintenance p {
-  max-width: 100%;
-}
+  .head-maintenance p {
+    max-width: 100%;
+  }
 
-    .money_job-prices {
-      min-width: auto;
+  .money_job-prices {
+    min-width: auto;
   }
 
   .money_job-prices p {
     white-space: wrap;
-}
+  }
 
-.pros_job-prices {
-  width: 100%;
-  margin-top: 10%;
-}
+  .pros_job-prices {
+    width: 100%;
+    margin-top: 10%;
+  }
 
-.full-content_maintenance {
-  grid-template-columns: 1fr;
-  grid-gap: 0;
-}
+  .full-content_maintenance {
+    grid-template-columns: 1fr;
+    grid-gap: 0;
+  }
 
-.content-2_maintenance, .content-1_maintenance {
-  margin-bottom: 15px;
-}
-
-
-
-
+  .content-2_maintenance,
+  .content-1_maintenance {
+    margin-bottom: 15px;
   }
 
 
 
 
-  /* @media (max-width:425px) { 
+}
+
+
+
+
+/* @media (max-width:425px) { 
     .col-one img  {
       width: 300px;
       height: 300px;
     }
   } */
-
-
-
-
