--- a/src/css/price/style_price.css
+++ b/src/css/price/style_price.css
@@ -42,7 +42,7 @@ h2 {
   background-size: 200% auto;
   color: #fff;
   background-clip: text;
-  text-fill-color: transparent;
+  /* text-fill-color: transparent; */
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   animation: textclip 4s linear infinite;
@@ -65,10 +65,6 @@ h2 {
 }
 
 
-
-.col-one {
-  /* max-width: 500px; */
-}
 
 .col-one img {
   /* width: 500px; */
