--- a/src/pages/price-list/oven-repair-cost.astro
+++ b/src/pages/price-list/oven-repair-cost.astro
@@ -321,10 +321,10 @@ import "css/price/style_price.css";
           </div>
 
           <div class="head_pricing-policy_foto-a">
-            <h2>Our Pricing Policy For The Oven Repair And How We Work</h2>
+            <h2>Oven Repair Cost - Labor Only Excluding Parts</h2>
             <p>
-              There are four costs to consider when it comes to making your oven
-              work optimally.
+              Here are common problems and associated costs for water heater
+              repair in Los Angeles:
             </p>
           </div>
         </div>
@@ -561,10 +561,11 @@ import "css/price/style_price.css";
       <div class="job-prices" id="parts-cost-anchor">
         <div class="head_pricing-policy head_pricing-policy_foto">
           <div class="head_pricing-policy_foto-a">
-            <h2>Our Pricing Policy For The Oven Repair And How We Work</h2>
+            <h2>Oven Replacement Parts Cost</h2>
             <p>
-              There are four costs to consider when it comes to making your oven
-              work optimally.
+              The cost of replacement parts may vary depending on the oven.
+              Specific part, make and model. Here is an approximate range for
+              some parts.
             </p>
           </div>
 
@@ -782,11 +783,7 @@ import "css/price/style_price.css";
           </div>
 
           <div class="head_pricing-policy_foto-a">
-            <h2>Our Pricing Policy For The Oven Repair And How We Work</h2>
-            <p>
-              There are four costs to consider when it comes to making your oven
-              work optimally.
-            </p>
+            <h2>Ways to Save Money on Oven Repair</h2>
           </div>
         </div>
 
